--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="hello.js" defer></script>
+    <script src="1. 자바스크립트 기초/16.사칙연산게임.js" defer></script>
 </head>
 <body>
-    <script src="./1. 자바스크립트 기초/6. quiz1.js ">
-        
-    </script>
+    
 </body>
 </html>
