--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="1. 자바스크립트 기초/16.사칙연산게임.js" defer></script>
+    <script src="2.배열/7.game.js" defer></script>
 </head>
 <body>
     
