--- a/8. 속성노드/5.4번파일모작.html
+++ b/8. 속성노드/5.4번파일모작.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,6 +40,12 @@
     <script>
         //버튼클릭 시 blue, circle 클래스 없애기
         //버튼으로 사각형, 원 왔다갔다
+
+        const $add=document.getElementById('add');
+        $add.onclick=function(){
+            
+        }
+
     </script>
 
 </body>
